speaker fixing in game view